style.css
html {
  background-color: rgb(250,253,255);
  color:#222;
  font-family: Lato
}

nav {
  max-width: 1000px;
  margin: auto;
}

nav a, h1 a {
  color:inherit;
  text-decoration: none;
}

nav > h3 {
  display: inline;
  margin-right: 15px;
}

nav > h3.current {
  text-decoration: underline;/* for chrome */
  text-decoration: underline double #666;
}

h1 {
  text-align: center;
  font-size: 3em;
}

section {
  margin-top: 20px;
  margin-bottom: 50px;
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
}
article {
  text-align: center;
}

article img {
  max-width: 100%;
}

footer {
  text-align:center;
  font-size:0.7em
}

footer p {
  margin: 5px;
}

